k8s/spring-music-dataservices.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-music
  template:
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
        - name: workload
          image: us-central1-docker.pkg.dev/meyerg/k8slab/spring-music:1.0-meyerg
          ports:
            - containerPort: 8080
