k8s/green-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: spring-music
  annotations:
    projectcontour.io/ingress.class: contour-external
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: <external IP>.sslip.io
  routes:
    - conditions:
        - prefix: /
      services:
        - name: spring-music-green
          port: 80
